--- a/content/w12.html
+++ b/content/w12.html
@@ -2,6 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -140,9 +141,23 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='HW.html'>Next</a> >> HW<br /><h1>About</h1>
-<p><a href="https://github.com/mdecycu/cmsite">https://github.com/mdecycu/cmsite</a></p>
-<br /> <a href='HW.html'>Next</a> >> HW</div>
+    <div id="tipue_search_content">HW << <a href='HW.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>w12</h1>
+<p><a href="https://mdecp2022.github.io/site-iyuans/content/Brython.html">ex1</a></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># Brython 的 input() 可以接受輸入提示字串, 跳出瀏覽器輸入表單後, 將輸入內容以字串取回
+user_input_temp = input("請輸入攝氏溫度值:")
+# 接著列出 user_input_temp 變數的資料型別
+print(type(user_input_temp))</pre>
+<p>ex2</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">'''
+f=c*9/5+32
+c=(f-32)*5/9
+'''
+c=input("攝氏溫度")
+#print(type(c)
+c=float(c)      
+print(c,c*9/5+32) </pre>
+<p>最簡單的程式，但卻引出了對於程式最複雜的遐想</p>
+<p></p><br />HW << <a href='HW.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
