--- a/config/content.htm
+++ b/config/content.htm
@@ -1,7 +1,23 @@
 <h1>About</h1>
 <p><a href="https://github.com/mdecycu/cmsite">https://github.com/mdecycu/cmsite</a></p>
-<p></p>
-<h1>Brython</h1>
+<h1>HW</h1>
+<h2>w12</h2>
+<p><a href="https://mdecp2022.github.io/site-iyuans/content/Brython.html">ex1</a></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># Brython 的 input() 可以接受輸入提示字串, 跳出瀏覽器輸入表單後, 將輸入內容以字串取回
+user_input_temp = input("請輸入攝氏溫度值:")
+# 接著列出 user_input_temp 變數的資料型別
+print(type(user_input_temp))</pre>
+<p>ex2</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">'''
+f=c*9/5+32
+c=(f-32)*5/9
+'''
+c=input("攝氏溫度")
+#print(type(c)
+c=float(c)      
+print(c,c*9/5+32) </pre>
+<p>最簡單的程式，但卻引出了對於程式最複雜的遐想</p>
+<p></p><h1>Brython</h1>
 <p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
